test/compile-fail/resolution/use/crate/expected.txt
error: special identifier `crate` can only be in the start position of a path
  ┌─ ./test/compile-fail/resolution/use/crate/top.rhdl:2:8
  │
2 │ use a::crate;
  │        ^^^^^

